updates endpoint naming
